further alignment issues with header nd title.

--- a/src/client/assets/stylesheets/sass/components/_daqitable.scss
+++ b/src/client/assets/stylesheets/sass/components/_daqitable.scss
@@ -115,7 +115,7 @@ svg|foreignObject {
   .aq-forecast-dd.daqi-tag--8, 
   .aq-forecast-dd.daqi-tag--9, 
   .aq-forecast-dd.daqi-tag--10  {
-      border-right: 1px solid Window; 
+      border-right: 1px solid windowText; 
    } 
   }
 }
